cmake_minimum_required(VERSION 2.9)

project(SDL++)

if(MSVC)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    add_definitions(-DWINDOWS_IGNORE_PACKING_MISMATCH)
endif()

include_directories("include")

add_library(SDL 
"src/SDL.c"
"src/SDL_error.c"
"src/SDL_fatal.c"

"src/audio/SDL_audio.c"
"src/audio/SDL_audiocvt.c"
"src/audio/SDL_audiodev.c"
"src/audio/SDL_mixer.c"
"src/audio/SDL_wave.c"
"src/audio/windx5/SDL_dx5audio.c"
"src/audio/windib/SDL_dibaudio.c"
"src/audio/dummy/SDL_dummyaudio.c"
"src/audio/disk/SDL_diskaudio.c"

"src/cdrom/SDL_cdrom.c"
"src/cdrom/win32/SDL_syscdrom.c"

"src/cpuinfo/SDL_cpuinfo.c"

"src/events/SDL_active.c"
"src/events/SDL_events.c"
"src/events/SDL_expose.c"
"src/events/SDL_keyboard.c"
"src/events/SDL_mouse.c"
"src/events/SDL_quit.c"
"src/events/SDL_resize.c"

"src/file/SDL_rwops.c"

"src/joystick/SDL_joystick.c"
"src/joystick/win32/SDL_mmjoystick.c"

"src/loadso/win32/SDL_sysloadso.c"

"src/main/win32/SDL_win32_main.c"

"src/stdlib/SDL_getenv.c"
"src/stdlib/SDL_iconv.c"
"src/stdlib/SDL_malloc.c"
"src/stdlib/SDL_qsort.c"
"src/stdlib/SDL_stdlib.c"
"src/stdlib/SDL_string.c"

"src/thread/SDL_thread.c"
"src/thread/win32/SDL_sysmutex.c"
"src/thread/win32/SDL_syssem.c"
"src/thread/win32/SDL_systhread.c"

"src/timer/SDL_timer.c"
"src/timer/win32/SDL_systimer.c"

"src/video/SDL_blit.c"
"src/video/SDL_blit_A.c"
"src/video/SDL_blit_N.c"
"src/video/SDL_blit_0.c"
"src/video/SDL_blit_1.c"
"src/video/SDL_bmp.c"
"src/video/SDL_cursor.c"
"src/video/SDL_gamma.c"
"src/video/SDL_pixels.c"
"src/video/SDL_RLEaccel.c"
"src/video/SDL_stretch.c"
"src/video/SDL_surface.c"
"src/video/SDL_video.c"
"src/video/SDL_yuv.c"
"src/video/SDL_yuv_sw.c"

"src/video/wincommon/SDL_sysevents.c"
"src/video/wincommon/SDL_sysmouse.c"
"src/video/wincommon/SDL_syswm.c"
"src/video/wincommon/SDL_wingl.c"

"src/video/windib/SDL_dibevents.c"
"src/video/windib/SDL_dibvideo.c"

"src/video/windx5/SDL_dx5events.c"
"src/video/windx5/SDL_dx5video.c"
"src/video/windx5/SDL_dx5yuv.c"

"src/video/dummy/SDL_nullevents.c"
"src/video/dummy/SDL_nullmouse.c"
"src/video/dummy/SDL_nullvideo.c")

if(MSVC)
    target_link_libraries(SDL 
        winmm.lib 
        version.lib 
        dxguid
        ddraw)
endif()

add_subdirectory("examples")